fixed layout bugs

--- a/src/app/features/posts/components/featured/featured.component.scss
+++ b/src/app/features/posts/components/featured/featured.component.scss
@@ -1,4 +1,5 @@
 .container {
+    padding: 1rem;
     height: 100%;
     min-height: 400px;
 }
@@ -6,10 +7,16 @@
 .featured-container {
     height: 100%;
     display: flex;
-    justify-content: safe center;
-    align-items: center;
-    gap: 1rem;
+    place-content: center center;
+    gap: 0.5rem;
 
     overflow-x: auto;
     border-radius: 1rem;
+}
+
+.post {
+    width: 400px;
+    height: 500px;
+    max-width: 100%;
+    max-height: 100%;
 }
