--- a/src/app/features/posts/components/post-list/post-list.component.scss
+++ b/src/app/features/posts/components/post-list/post-list.component.scss
@@ -15,6 +15,6 @@
     right: 10px;
 }
 
-.post-container {
-    height: 500px;
+.post {
+    max-height: 500px;
 }
