--- a/src/app/features/posts/components/post/post.component.scss
+++ b/src/app/features/posts/components/post/post.component.scss
@@ -9,12 +9,13 @@
     );
 }
 
-.container {
+:host {
     position: relative;
     width: 100%;
     height: 100%;
     font-size: clamp(0.875rem, 2.5vw, 1rem);
     overflow: hidden;
+    display: inline;
     border-radius: 14px;
 }
 
@@ -26,6 +27,7 @@
     overflow: hidden;
     background: none;
     border: 1px solid var(--mat-sys-outline-variant);
+    border-radius: 14px;
 
     cursor: pointer;
     transition: filter 200ms;
